--- a/odins_website/main.css
+++ b/odins_website/main.css
@@ -1,4 +1,4 @@
-
+/*
 h1 {
   color: red;
   font-family: verdana;
@@ -9,7 +9,7 @@ p {
   margin: 50px;
 }
 body{
-	background-color: lightblue;
+	background-color: olive;
 	text-align: center;
 }
 head{
@@ -19,4 +19,55 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+*/
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
+*:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body{
+	background-color: #dcdcdc;
+  margin: 0;
+}
+header nav, footer nav{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+.container {
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width:960px;
+}
+
+nav li{
+  float: left;
+}
+
+nav li a{
+  display: block;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+nav li a:hover{
+  background-color: #555;
+  color: white;
+}
+
+.active {
+  background-color: #5f9ea0;
+}
+
+h1, h3, h4, h5, p {
+  margin-bottom: 10px;
 }
