--- a/odins_website/main.css
+++ b/odins_website/main.css
@@ -21,6 +21,10 @@ ul {
   padding: 0;
 }
 */
+h4{
+  font-size: 120%;
+  color: #5f9ea0;
+}
 *{
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -33,8 +37,17 @@ ul {
 body{
 	background-color: #dcdcdc;
   margin: 0;
+  height: 200vh;
 }
-header nav, footer nav{
+
+header img{
+  border-radius: 300px;
+  border: 2px solid #28292c;
+  height: 300px;
+  margin-left: 300px;
+}
+
+nav{
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -70,4 +83,13 @@ nav li a:hover{
 
 h1, h3, h4, h5, p {
   margin-bottom: 10px;
+}
+
+.navbar{
+  position: sticky;
+  top: 0;
+}
+
+.introduction{
+  margin-left: 10px;
 }
